# visionai

./: .env.example  README.md  docker-compose.yml  mediamtx.yml
python-detector/: .env.example  Dockerfile  main.py  pyproject.toml
python-detector/app/: main.py  settings.py
python-detector/app/adapters/video/: rtsp_stream.py  rtsp_writer.py
python-detector/app/adapters/vision/: yolo_detector.py
python-detector/app/domain/: __init__.py  bbox.py  detection.py  frame.py
python-detector/app/usecases/: detect_objects.py  ports.py
python-detector/app/utils/: fps_counter.py
python-detector/src/app/: main.py
python-detector/src/app/domain/: bbox.py  detection.py  frame.py
python-detector/src/app/usecases/: detect_objects.py
